Added animated fade in for 'HELLO WORLD' in sync/async comparison

--- a/src/_assets/css/main.scss
+++ b/src/_assets/css/main.scss
@@ -204,6 +204,10 @@ pre, pre.prettyprint {
     padding: 2px;
   }
 
+  .hideme {
+    opacity: 0;
+  }
+
   a {
     font-family: inherit;
     font-weight: inherit;
