--- a/src/_assets/css/main.scss
+++ b/src/_assets/css/main.scss
@@ -204,8 +204,15 @@ pre, pre.prettyprint {
     padding: 2px;
   }
 
+  .showme {
+    position: absolute;
+    opacity: 1;
+    z-index: 2;
+  }
+
   .hideme {
-    opacity: 0;
+    position: absolute;
+    opacity: 1;
   }
 
   a {
